Bug 453234 - Kate crashes with specific tab and menu selections
Summary: Kate crashes with specific tab and menu selections
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.04.0
Platform: Neon Linux
: HI crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: drkonqi
: 453454 454589 454594 455056 457105 457184 459239 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-04-30 16:09 UTC by jdavidwyatt
Modified: 2022-09-18 16:04 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jdavidwyatt 2022-04-30 16:09:03 UTC
Application: kate (22.04.0)

Qt Version: 5.15.3
Frameworks Version: 5.93.0
Operating System: Linux 5.13.0-40-generic x86_64
Windowing System: X11
Distribution: KDE neon User - 5.24
DrKonqi: 5.24.4 [KCrashBackend]

-- Information about the crash:
I was exploring Kate after install. Selecting the Filesystem tab produces crash every time. Selecting menu option Settings > Configure Kate produces crash every time.

The crash can be reproduced every time.

-- Backtrace:
Application: Kate (kate), signal: Segmentation fault

[New LWP 13634]
[New LWP 13638]
[New LWP 13639]
[New LWP 13640]
[New LWP 13641]
[New LWP 13642]
[New LWP 13643]
[New LWP 13644]
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
0x00007fd4b9b6c9cf in __GI___poll (fds=0x7fff82fb8978, nfds=1, timeout=1000) at ../sysdeps/unix/sysv/linux/poll.c:29
__preamble__
[Current thread is 1 (Thread 0x7fd4b5b989c0 (LWP 13631))]

Thread 9 (Thread 0x7fd49a7fc700 (LWP 13644)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x564705c26750) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x564705c26700, cond=0x564705c26728) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x564705c26728, mutex=0x564705c26700) at pthread_cond_wait.c:638
#3  0x00007fd4a663a5eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#4  0x00007fd4a663a1eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#5  0x00007fd4b8a7c609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007fd4b9b79163 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 8 (Thread 0x7fd49affd700 (LWP 13643)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x564705c26750) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x564705c26700, cond=0x564705c26728) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x564705c26728, mutex=0x564705c26700) at pthread_cond_wait.c:638
#3  0x00007fd4a663a5eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#4  0x00007fd4a663a1eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#5  0x00007fd4b8a7c609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007fd4b9b79163 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 7 (Thread 0x7fd49b7fe700 (LWP 13642)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x564705c261c0) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x564705c26170, cond=0x564705c26198) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x564705c26198, mutex=0x564705c26170) at pthread_cond_wait.c:638
#3  0x00007fd4a663a5eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#4  0x00007fd4a663a1eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#5  0x00007fd4b8a7c609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007fd4b9b79163 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 6 (Thread 0x7fd49bfff700 (LWP 13641)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x564705c261c0) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x564705c26170, cond=0x564705c26198) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x564705c26198, mutex=0x564705c26170) at pthread_cond_wait.c:638
#3  0x00007fd4a663a5eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#4  0x00007fd4a663a1eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#5  0x00007fd4b8a7c609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007fd4b9b79163 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 5 (Thread 0x7fd4a0cbe700 (LWP 13640)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x564705c261c0) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x564705c26170, cond=0x564705c26198) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x564705c26198, mutex=0x564705c26170) at pthread_cond_wait.c:638
#3  0x00007fd4a663a5eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#4  0x00007fd4a663a1eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#5  0x00007fd4b8a7c609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007fd4b9b79163 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 4 (Thread 0x7fd4acb58700 (LWP 13639)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x564705b32998) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x564705b32948, cond=0x564705b32970) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x564705b32970, mutex=0x564705b32948) at pthread_cond_wait.c:638
#3  0x00007fd4a663a5eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#4  0x00007fd4a663a1eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#5  0x00007fd4b8a7c609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007fd4b9b79163 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 3 (Thread 0x7fd4ad49a700 (LWP 13638)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x564705c29528) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x564705c294d8, cond=0x564705c29500) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x564705c29500, mutex=0x564705c294d8) at pthread_cond_wait.c:638
#3  0x00007fd4a663a5eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#4  0x00007fd4a663a1eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#5  0x00007fd4b8a7c609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007fd4b9b79163 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 2 (Thread 0x7fd4af92b700 (LWP 13634)):
#0  0x00007fff82fccaed in clock_gettime ()
#1  0x00007fd4b9b370e5 in __GI___clock_gettime (clock_id=clock_id@entry=1, tp=tp@entry=0x7fd4af92a920) at ../sysdeps/unix/sysv/linux/clock_gettime.c:38
#2  0x00007fd4ba13cf25 in qt_clock_gettime (ts=0x7fd4af92a920, clock=1) at kernel/qelapsedtimer_unix.cpp:175
#3  do_gettime (frac=<synthetic pointer>, sec=<synthetic pointer>) at kernel/qelapsedtimer_unix.cpp:166
#4  qt_gettime () at kernel/qelapsedtimer_unix.cpp:175
#5  0x00007fd4ba13b7bd in QTimerInfoList::updateCurrentTime (this=this@entry=0x7fd4a8004d50) at kernel/qtimerinfo_unix.cpp:91
#6  0x00007fd4ba13bd99 in QTimerInfoList::timerWait (this=0x7fd4a8004d50, tm=...) at kernel/qtimerinfo_unix.cpp:388
#7  0x00007fd4ba13d3b6 in timerSourcePrepareHelper (timeout=0x7fd4af92a9e4, src=<optimized out>) at kernel/qeventdispatcher_glib.cpp:162
#8  timerSourcePrepare (source=<optimized out>, timeout=0x7fd4af92a9e4) at kernel/qeventdispatcher_glib.cpp:166
#9  0x00007fd4b806a8ef in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#10 0x00007fd4b806b29b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#11 0x00007fd4b806b4a3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#12 0x00007fd4ba13d65b in QEventDispatcherGlib::processEvents (this=0x7fd4a8000b60, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#13 0x00007fd4ba0e187b in QEventLoop::exec (this=this@entry=0x7fd4af92abb0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:141
#14 0x00007fd4b9efb442 in QThread::exec (this=<optimized out>) at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#15 0x00007fd4bb19bf4b in ?? () from /lib/x86_64-linux-gnu/libQt5DBus.so.5
#16 0x00007fd4b9efc623 in QThreadPrivate::start (arg=0x7fd4bb21fd80) at thread/qthread_unix.cpp:331
#17 0x00007fd4b8a7c609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#18 0x00007fd4b9b79163 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7fd4b5b989c0 (LWP 13631)):
[KCrash Handler]
#4  0x00007fd4bb5f9c98 in QFlags<KEntryMap::SearchFlag>::operator|= (other=<optimized out>, this=<optimized out>) at ./src/core/kconfig.cpp:1045
#5  KConfigPrivate::lookupData (this=this@entry=0x25a, group=..., key=key@entry=0x7fd4b44d5b26 "View Style", flags=flags@entry=..., expand=expand@entry=0x7fff82fb9617) at ./src/core/kconfig.cpp:1046
#6  0x00007fd4bb60ca04 in KConfigGroup::readEntry (this=this@entry=0x564705497e30, key=key@entry=0x7fd4b44d5b26 "View Style", aDefault=...) at /usr/include/c++/9/bits/atomic_base.h:326
#7  0x00007fd4bb60cc40 in KConfigGroup::readEntry (this=0x564705497e30, key=0x7fd4b44d5b26 "View Style", aDefault=0x7fd4b44d5b1b "DetailTree") at /usr/include/x86_64-linux-gnu/qt5/QtCore/qstring.h:706
#8  0x00007fd4b445f021 in KDirOperator::readConfig(KConfigGroup const&) () from /lib/x86_64-linux-gnu/libKF5KIOFileWidgets.so.5
#9  0x00007fd4aeb86c24 in KateFileBrowser::readSessionConfig (this=this@entry=0x564705d86c50, cg=...) at ./addons/filebrowser/katefilebrowser.cpp:160
#10 0x00007fd4aeb8408d in KateFileBrowserPluginView::createFileBrowser (this=0x56470533eaa0, visible=<optimized out>) at /usr/include/c++/9/bits/unique_ptr.h:360
#11 0x00007fd4ba119e30 in doActivate<false> (sender=0x564705494dd0, signal_index=7, argv=0x7fff82fb98e0) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:395
#12 0x00007fd4ba1131c7 in QMetaObject::activate (sender=<optimized out>, m=m@entry=0x56470483d300 <KateMDI::ToolView::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fff82fb98e0) at kernel/qobject.cpp:3946
#13 0x00005647047ad923 in KateMDI::ToolView::toolVisibleChanged (this=<optimized out>, _t1=<optimized out>, _t1@entry=true) at ./obj-x86_64-linux-gnu/kate/kate-lib_autogen/EWIEGA46WW/moc_katemdi.cpp:333
#14 0x0000564704773611 in KateMDI::ToolView::setToolVisible (vis=true, this=<optimized out>) at ./kate/katemdi.cpp:244
#15 KateMDI::Sidebar::showWidget (this=this@entry=0x5647050f8ee0, widget=<optimized out>) at ./kate/katemdi.cpp:480
#16 0x000056470477395f in KateMDI::Sidebar::tabClicked (this=0x5647050f8ee0, i=<optimized out>) at ./kate/katemdi.cpp:628
#17 0x00005647047af6eb in KateMDI::Sidebar::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at ./obj-x86_64-linux-gnu/kate/kate-lib_autogen/EWIEGA46WW/moc_katemdi.cpp:406
#18 0x00007fd4ba119e30 in doActivate<false> (sender=0x564705493a70, signal_index=12, argv=0x7fff82fb9b10) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:395
#19 0x00007fd4ba1131c7 in QMetaObject::activate (sender=<optimized out>, m=m@entry=0x7fd4bb82de00 <KMultiTabBarButton::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fff82fb9b10) at kernel/qobject.cpp:3946
#20 0x00007fd4bb7a9c62 in KMultiTabBarButton::clicked (this=<optimized out>, _t1=<optimized out>) at ./obj-x86_64-linux-gnu/src/KF5WidgetsAddons_autogen/include/moc_kmultitabbar.cpp:289
#21 0x00007fd4ba119dfe in QtPrivate::QSlotObjectBase::call (a=0x7fff82fb9c30, r=0x564705493a70, this=0x564705493fe0) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#22 doActivate<false> (sender=0x564705493a70, signal_index=9, argv=0x7fff82fb9c30) at kernel/qobject.cpp:3886
#23 0x00007fd4ba1131c7 in QMetaObject::activate (sender=sender@entry=0x564705493a70, m=m@entry=0x7fd4bb13f600 <QAbstractButton::staticMetaObject>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7fff82fb9c30) at kernel/qobject.cpp:3946
#24 0x00007fd4bad1f3f6 in QAbstractButton::clicked (this=this@entry=0x564705493a70, _t1=<optimized out>) at .moc/moc_qabstractbutton.cpp:308
#25 0x00007fd4bad1f61e in QAbstractButtonPrivate::emitClicked (this=0x564705493ad0) at widgets/qabstractbutton.cpp:415
#26 0x00007fd4bad20af3 in QAbstractButtonPrivate::click (this=0x564705493ad0) at widgets/qabstractbutton.cpp:408
#27 0x00007fd4bad20cb5 in QAbstractButton::mouseReleaseEvent (this=0x564705493a70, e=0x7fff82fba1f0) at widgets/qabstractbutton.cpp:1044
#28 0x00007fd4bac69d76 in QWidget::event (this=0x564705493a70, event=0x7fff82fba1f0) at kernel/qwidget.cpp:8677
#29 0x00007fd4bad21ee3 in QAbstractButton::event (this=this@entry=0x564705493a70, e=e@entry=0x7fff82fba1f0) at widgets/qabstractbutton.cpp:1001
#30 0x00007fd4badc5893 in QPushButton::event (this=0x564705493a70, e=0x7fff82fba1f0) at widgets/qpushbutton.cpp:718
#31 0x00007fd4bac26dc3 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x564705493a70, e=0x7fff82fba1f0) at kernel/qapplication.cpp:3637
#32 0x00007fd4bac2fdc7 in QApplication::notify(QObject*, QEvent*) () at kernel/qapplication.cpp:3081
#33 0x00007fd4ba0e2d7a in QCoreApplication::notifyInternal2 (receiver=0x564705493a70, event=0x7fff82fba1f0) at ../../include/QtCore/5.15.3/QtCore/private/../../../../../src/corelib/thread/qthread_p.h:332
#34 0x00007fd4bac2f0c7 in QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0x564705493a70, event=event@entry=0x7fff82fba1f0, alienWidget=alienWidget@entry=0x564705493a70, nativeWidget=0x564704fc8230, buttonDown=<optimized out>, lastMouseReceiver=..., spontaneous=true, onlyDispatchEnterLeave=false) at kernel/qapplication.cpp:2619
#35 0x00007fd4bac84f64 in QWidgetWindow::handleMouseEvent (this=0x564705b5b370, event=0x7fff82fba670) at /usr/include/c++/9/bits/atomic_base.h:413
#36 0x00007fd4bac88284 in QWidgetWindow::event (event=0x7fff82fba670, this=0x564705b5b370) at kernel/qwidgetwindow.cpp:300
#37 QWidgetWindow::event (this=0x564705b5b370, event=0x7fff82fba670) at kernel/qwidgetwindow.cpp:239
#38 0x00007fd4bac26dc3 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x564705b5b370, e=0x7fff82fba670) at kernel/qapplication.cpp:3637
#39 0x00007fd4bac2fbd8 in QApplication::notify(QObject*, QEvent*) () at kernel/qapplication.cpp:3161
#40 0x00007fd4ba0e2d7a in QCoreApplication::notifyInternal2 (receiver=0x564705b5b370, event=0x7fff82fba670) at ../../include/QtCore/5.15.3/QtCore/private/../../../../../src/corelib/thread/qthread_p.h:332
#41 0x00007fd4ba4c6578 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () at kernel/qguiapplication.cpp:2282
#42 0x00007fd4ba4c7be5 in QGuiApplicationPrivate::processWindowSystemEvent (e=0x564705b5ada0) at kernel/qguiapplication.cpp:2002
#43 0x00007fd4ba49f7bc in QWindowSystemInterface::sendWindowSystemEvents (flags=flags@entry=...) at kernel/qwindowsysteminterface.cpp:1169
#44 0x00007fd4b54eb1ce in xcbSourceDispatch (source=<optimized out>) at qxcbeventdispatcher.cpp:105
#45 0x00007fd4b806b17d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#46 0x00007fd4b806b400 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#47 0x00007fd4b806b4a3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#48 0x00007fd4ba13d642 in QEventDispatcherGlib::processEvents (this=0x564704fc8870, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#49 0x00007fd4ba0e187b in QEventLoop::exec (this=this@entry=0x7fff82fbaa10, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:141
#50 0x00007fd4ba0e9a24 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#51 0x000056470475672b in main (argc=<optimized out>, argv=<optimized out>) at ./kate/main.cpp:714
[Inferior 1 (process 13631) detached]

Possible duplicates by query: bug 453152, bug 451615, bug 442873, bug 421596, bug 301772.

Reported using DrKonqi
Comment 1 Christoph Cullmann 2022-04-30 16:30:24 UTC
Git commit a2d0f284caf5bc9ff41995351d722181c16f5dad by Christoph Cullmann.
Committed on 30/04/2022 at 16:30.
Pushed by cullmann into branch 'master'.

fix crash on file browser activation

M  +6    -3    addons/filebrowser/katefilebrowserplugin.cpp

https://invent.kde.org/utilities/kate/commit/a2d0f284caf5bc9ff41995351d722181c16f5dad
Comment 2 Christoph Cullmann 2022-04-30 16:31:01 UTC
Git commit a28624c877cfe6db6ae6ab257f95af36213b25e0 by Christoph Cullmann.
Committed on 30/04/2022 at 16:30.
Pushed by cullmann into branch 'release/22.04'.

fix crash on file browser activation


(cherry picked from commit a2d0f284caf5bc9ff41995351d722181c16f5dad)

M  +6    -3    addons/filebrowser/katefilebrowserplugin.cpp

https://invent.kde.org/utilities/kate/commit/a28624c877cfe6db6ae6ab257f95af36213b25e0
Comment 3 Christoph Cullmann 2022-05-07 17:44:28 UTC
*** Bug 453454 has been marked as a duplicate of this bug. ***
Comment 4 Waqar Ahmed 2022-05-14 18:39:43 UTC
*** Bug 453795 has been marked as a duplicate of this bug. ***
Comment 5 Waqar Ahmed 2022-05-30 04:31:07 UTC
*** Bug 454594 has been marked as a duplicate of this bug. ***
Comment 6 Waqar Ahmed 2022-05-30 04:31:50 UTC
*** Bug 454589 has been marked as a duplicate of this bug. ***
Comment 7 Waqar Ahmed 2022-06-09 06:01:21 UTC
*** Bug 455056 has been marked as a duplicate of this bug. ***
Comment 8 Waqar Ahmed 2022-07-25 05:32:39 UTC
*** Bug 457105 has been marked as a duplicate of this bug. ***
Comment 9 Waqar Ahmed 2022-08-11 05:50:05 UTC
*** Bug 457184 has been marked as a duplicate of this bug. ***
Comment 10 Christoph Cullmann 2022-09-17 19:13:58 UTC
*** Bug 459239 has been marked as a duplicate of this bug. ***