fix crash on file browser activation

BUG: 453234


(cherry picked from commit a2d0f284caf5bc9ff41995351d722181c16f5dad)